# scrutari-verify

./: .gitignore  Cargo.toml  LICENSE  PUBLISHING.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
src/: canonical.rs  crypto.rs  hexutil.rs  lib.rs  main.rs  pack.rs  verify.rs
tests/: verify_pack.rs
